Fixes team on mobile

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -49,3 +49,7 @@ img.aidx {
   width: 430px;
   max-width: 100%;
 }
+
+.member-details p {
+  margin-bottom: 0;
+}
